[tool.poetry]
name = "easybroker"
version = "0.1.0"
description = "A client for the EasyBroker's API"
authors = ["Armando Ezequiel Puerta <armando.ezequiel.puerta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
